docs/libraries/php/v1.0.0/process_payment.mdx
import CodeBlock from '@theme/CodeBlock';

# Process payment

After completing the operations in the TatraPayPlus service, the user will be redirected to the **Redirect URL** provided during payment initialization.

## Redirect params

### Path Parameters for Redirection Without a Technical Error

| Path Parameter  | Type   | Required/Optional | Description                                   |
| --------------- | ------ | ----------------- | --------------------------------------------- |
| `paymentId`     | string | Required          | Identifier of the payment instruction         |
| `paymentMethod` | string | Required          | Code of the selected payment method           |

### Path Parameters for Redirection in Case of a Technical Error

| Path Parameter  | Type   | Required/Optional | Description                                   |
| --------------- | ------ | ----------------- | --------------------------------------------- |
| `paymentId`     | string | Required          | Identifier of the payment instruction         |
| `error`         | string | Required          | Error code                                    |
| `errorId`       | string | Required          | Unique error identifier                       |

### Example

Success ✔️
```bash
https://theredirecturl.com/redirect?paymentId=e43f85a2-b21f-4ec2-b0a1-0e449d6972c7&paymentMethod=CARD_PAY
```

Error ❌️
```bash
https://theredirecturl.com/redirect?paymentId=e43f85a2-b21f-4ec2-b0a1-0e449d6972c7&error=FAILED&errorId=43ca30ec-2956-454c-9d1b-4bd2befee7c8
```

## Retrieve payment status

Based on received GET params you should retrieve status of payment as following:

import getPaymentStatus from '!!raw-loader!@site/code_samples/php/v1.0.0/get_payment_status.php';

<CodeBlock language="php">{getPaymentStatus}</CodeBlock>

`simple_status` return value can have one of three values: `ACCEPTED`, `PENDING`, or `REJECTED`.\
Your implementation should take the appropriate action based on the value of `simple_status`.

`$response['object']` of type `PaymentIntentStatusResponse` contains all the information based on structure described in [API reference](/docs/api/get-payment-intent-status).

The response also includes saved card information (if the customer chooses to save their card details).
More details on this feature can be found [💳 here 💳](/docs/libraries/php/v1.0.0/save_card).

## Periodical task

Some payments may be processed later.
Therefore, you should periodically check the status of **"pending" payments**.
We recommend setting up a scheduled task that retrieves all pending payments from your system.
Using the saved `payment_id` with the `getPaymentIntentStatus` method, you can obtain the current status and take the appropriate action in your system.

Recommended pooling rates based on **age of orders**:

| Time Range            | Polling Frequency   |
|-----------------------|---------------------|
| First hour            | Every 5 minutes     |
| 1 hour - 24 hours     | Every hour          |
| After 24 hours        | 5 times per day     |

<Button label="See full API reference" link="/docs/api/get-payment-intent-status"/>